--- a/.github/workflows/pyzpkpackage.yml
+++ b/.github/workflows/pyzpkpackage.yml
@@ -26,7 +26,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        # pip install -r requirements.txt
+        python setup.py install
     - name: Lint with flake8
       run: |
         pip install flake8
@@ -37,4 +38,4 @@ jobs:
     - name: Test with pytest
       run: |
         pip install pytest
-        pytest
+        pytest test
