--- a/.github/workflows/pyzpkpackage.yml
+++ b/.github/workflows/pyzpkpackage.yml
@@ -38,6 +38,9 @@ jobs:
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
           flake8 test
+      - name: Building Library
+        run: |
+          ./build.sh
       - name: Scan for security issues
         run: |
           bandit -r syft -ll
