giving read permission to build.sh for CI exec

--- a/.github/workflows/pyzpkpackage.yml
+++ b/.github/workflows/pyzpkpackage.yml
@@ -40,6 +40,7 @@ jobs:
           flake8 test
       - name: Building Library
         run: |
+          chmod u+r+x build.sh
           ./build.sh
       - name: Scan for security issues
         run: |
