added submodule init and reset to CI

--- a/.github/workflows/pyzpkpackage.yml
+++ b/.github/workflows/pyzpkpackage.yml
@@ -40,6 +40,8 @@ jobs:
           flake8 test
       - name: Building Library
         run: |
+          git submodule init
+          git submodule foreach --recursive git reset --hard
           chmod u+r+x build.sh
           ./build.sh
       - name: Scan for security issues
