Removing previously fetched library in CI

--- a/.github/workflows/pyzpkpackage.yml
+++ b/.github/workflows/pyzpkpackage.yml
@@ -40,6 +40,7 @@ jobs:
           flake8 test
       - name: Building Library
         run: |
+          rm -r libsnark
           git submodule init
           git submodule foreach --recursive git reset --hard
           chmod u+r+x build.sh
