--- a/.github/workflows/pyzpkpackage.yml
+++ b/.github/workflows/pyzpkpackage.yml
@@ -46,7 +46,7 @@ jobs:
           cd libsnark
           mkdir build
           cd build
-          cmake ..
+          cmake .. -DWITH_PROCPS=OFF
           make
       - name: Scan for security issues
         run: |
