--- a/.github/workflows/pyzpkpackage.yml
+++ b/.github/workflows/pyzpkpackage.yml
@@ -46,8 +46,7 @@ jobs:
           cd libsnark
           mkdir build
           cd build
-          sudo apt-get install libboost-all-dev
-          pkg-config libboost-all-dev --cflags
+          sudo apt-get install libboost-dev= 1.40.0
           cmake .. -DWITH_PROCPS=OFF 
           make
       - name: Scan for security issues
