updating using boost github CI

--- a/.github/workflows/pyzpkpackage.yml
+++ b/.github/workflows/pyzpkpackage.yml
@@ -46,7 +46,7 @@ jobs:
           cd libsnark
           mkdir build
           cd build
-          sudo apt-get install libboost-dev= 1.40
+          git submodule update --init --recursive
           cmake .. -DWITH_PROCPS=OFF 
           make
       - name: Scan for security issues
