--- a/.github/workflows/pyzpkpackage.yml
+++ b/.github/workflows/pyzpkpackage.yml
@@ -47,7 +47,7 @@ jobs:
           mkdir build
           cd build
           git submodule update --init --recursive
-          sudo apt-get install libboost-dev= 1.55
+          sudo apt-get install libboost-all-dev
           cmake .. -DWITH_PROCPS=OFF 
           make
       - name: Scan for security issues
