Update CI to incorporate lib build

--- a/.github/workflows/pyzpkpackage.yml
+++ b/.github/workflows/pyzpkpackage.yml
@@ -43,7 +43,8 @@ jobs:
           rm -r libsnark
           git submodule init
           git submodule update --init --recursive
-          chmod +x build.sh
+          sudo apt-get install libboost-all-dev
+          chmod x build.sh
           ./build.sh
       - name: Scan for security issues
         run: |
