Update CI for lib build

--- a/.github/workflows/pyzpkpackage.yml
+++ b/.github/workflows/pyzpkpackage.yml
@@ -44,7 +44,7 @@ jobs:
           git submodule init
           git submodule update --init --recursive
           sudo apt-get install libboost-all-dev
-          chmod x build.sh
+          chmod --x build.sh
           ./build.sh
       - name: Scan for security issues
         run: |
